--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,22 @@ spring.datasource.url=jdbc:postgresql://localhost:5431/votacao
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+
+# Disable Hibernate schema generation
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
+
+# Logging SQL (optional)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Enable Flyway
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
+# API Documentation
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
