--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,10 +18,15 @@ spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
 
-# API Documentation
+# Server Configuration
+server.port=8080
+server.servlet.context-path=/api/v1/votacao
+
+# http://localhost:8080/api/v1/votacao/swagger-ui/index.html#/
+# API Documentation Configuration
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
-
-server.port=8080
-
-server.servlet.context-path=/api/v1/votacao
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.use-root-path=true
+springdoc.pathsToMatch=/associados/**, /pautas/**, /votos/**, /sessoes/**
